--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://github.com/coduori/dmvic#readme",
   "dependencies": {
-    "axios": "^1.7.9",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "undici": "^7.2.0"
   }
 }
