--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "test": "NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles"
+    "test": "NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
