--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,15 +22,18 @@ jobs:
       - run: npm test
 
   release:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.GH_WORKFLOW_RELEASE_PLEASE_TOKEN }}
+          token: ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
           release-type: node
+          release-type: node
+          versioning-strategy: increase
 
   publish-npm:
-    needs: build
+    needs: release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
