fix: update release workflow

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,6 +22,7 @@ jobs:
       - run: npm test
 
   release:
+    name: Version bump
     needs: test
     runs-on: ubuntu-latest
     steps:
@@ -30,6 +31,12 @@ jobs:
           token: ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
           release-type: node
           versioning-strategy: increase
+
+      - name: Merge Release PR
+        run: |
+          gh auth login --with-token < ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
+          PR_NUMBER=$(gh pr list --state open --json number,title -L 10 | grep 'release' | head -n 1 | awk '{print $1}')
+          gh pr merge $PR_NUMBER --merge --delete-branch
 
   publish-npm:
     needs: release
