--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,7 +26,11 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: googleapis/release-please-action@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Release Please
+        uses: googleapis/release-please-action@v4
         with:
           token: ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
           release-type: node
