chore: fix gh token

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Merge Release PR
         run: |
-          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+          gh auth login --with-token <<< "${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}"
           PR_NUMBER=$(gh pr list --state open --json number,title -L 10 | grep 'release' | head -n 1 | awk '{print $1}')
           gh pr merge $PR_NUMBER --merge --delete-branch
 
