--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -25,13 +25,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Set up Release Please
         uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_WORKFLOW_TOKEN_NPM }}
           release-type: node
           merge: true
 
