--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -27,12 +27,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Release Please
+        id: release
         uses: GoogleCloudPlatform/release-please-action@v4
         with:
           token: ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
           release-type: node
           bump-minor-pre-major: true
           versioning-strategy: increase
+    
+      - name: Enable automerge for release PR
+        if: ${{ steps.release.outputs.pr }}
+        uses: peter-evans/enable-pull-request-automerge@v3
+        with:
+          token: ${{ secrets.GH_WORKFLOW_TOKEN_NPM }}
+          pull-request-number: ${{ steps.release.outputs.pr }}
+          merge-method: squash
 
 
 
