fix: update npm publish to remove --provenance --access public

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,7 +39,7 @@ jobs:
         if: ${{ steps.release.outputs.pr }}
         uses: peter-evans/enable-pull-request-automerge@v3
         with:
-          token: ${{ secrets.GH_WORKFLOW_TOKEN_NPM }}
+          token: ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
           pull-request-number: ${{ steps.release.outputs.pr }}
           merge-method: squash
 
@@ -58,6 +58,6 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm publish --provenance --access public
+      - run: npm publish # --provenance --access public to be added when we make the package public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GH_WORKFLOW_TOKEN_NPM}}
