fix: debug log statement

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -36,17 +36,15 @@ jobs:
           versioning-strategy: increase
 
       - name: Debug release PR output
-        run: echo "PR: ${{ steps.release.outputs.pr }}"
-    
-      - name: Enable automerge for release PR
+        run: "echo \"PR: ${{ steps.release.outputs.pr }}\""
+
+      - name: Merge release PR
         if: ${{ steps.release.outputs.pr != '' }}
         uses: peter-evans/enable-pull-request-automerge@v3
         with:
           token: ${{ secrets.GH_WORKFLOW_TOKEN_RELEASE }}
           pull-request-number: ${{ steps.release.outputs.pr }}
           merge-method: squash
-
-
 
   publish-npm:
     needs: release
