fix: debug script

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,11 +37,17 @@ jobs:
 
       - name: Debug release PR output
         run: "echo \"PR Number: ${{ fromJson(steps.release.outputs.pr).number }}\""
+      
+      - name: Debug release PR output 2
         run: echo '${{ steps.release.outputs.pr }}' | base64
+      
+      - name: Debug release PR output 3
         run: |
           echo "PR Number: ${{ fromJson(steps.release.outputs.pr).number }}"
           echo "Title: ${{ fromJson(steps.release.outputs.pr).title }}"
           echo "Branch: ${{ fromJson(steps.release.outputs.pr).headBranchName }}"
+
+      - name: Debug release PR output 4
         run: |
           echo "${{ steps.release.outputs.pr }}" | base64
 
