--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "dmvic",
   "version": "1.1.0",
   "description": "A DMVIC NPM package to manage DMVIC certificate requests",
-  "main": "src/index.js",
+  "main": "lib/index.mjs",
   "type": "module",
   "scripts": {
     "lint": "eslint . --ext .mjs,.js",
     "lint:fix": "eslint . --ext .mjs,.js --fix",
-    "start": "node src/index.js",
+    "start": "node lib/index.js",
     "test": "NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles"
   },
   "repository": {
@@ -27,9 +27,7 @@
   },
   "homepage": "https://github.com/coduori/dmvic#readme",
   "dependencies": {
-    "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "redis": "^4.7.0",
     "undici": "^7.2.0"
   },
   "devDependencies": {
@@ -37,6 +35,8 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-security": "^3.0.1"
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-security": "^3.0.1",
+    "jest": "^29.7.0"
   }
 }
