fix: run lint before test; edit README

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --ext .mjs,.js .",
     "lint:fix": "eslint --ext .mjs,.js . --fix",
     "start": "node lib/index.js",
-    "test": "NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles",
+    "test": "npm run lint && NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles",
     "test:watch": "npm run lint && NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles --watch"
   },
   "repository": {
