--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,8 @@
       4
     ],
     "no-console": "error",
+    "import/prefer-default-export": "off",
+    "import/no-default-export": "error",
     "import/no-extraneous-dependencies": [
       2,
       {
