--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "dmvic",
-  "version": "1.6.0",
-  "description": "A DMVIC NPM package to manage DMVIC certificate requests",
-  "main": "lib/index.mjs",
-  "type": "module",
-  "scripts": {
-    "lint": "eslint --ext .mjs,.js .",
-    "lint:fix": "eslint --ext .mjs,.js . --fix",
-    "start": "node lib/index.js",
-    "test": "NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles",
-    "test:watch": "npm run lint && NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules npx jest --detectOpenHandles --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/coduori/dmvic.git"
-  },
-  "keywords": [
-    "dmvic",
-    "motor vehicle insurance certificates",
-    "kenya",
-    "aki"
-  ],
-  "author": "oduori oranga",
-  "license": "GNU",
-  "bugs": {
-    "url": "https://github.com/coduori/dmvic/issues"
-  },
-  "homepage": "https://github.com/coduori/dmvic#readme",
-  "dependencies": {
-    "path": "^0.12.7",
-    "undici": "^7.2.0"
-  },
-  "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-security": "^3.0.1",
-    "jest": "^29.7.0"
-  }
+    "name": "dmvic",
+    "version": "1.6.0",
+    "description": "A DMVIC NPM package to manage DMVIC certificate requests",
+    "main": "lib/index.mjs",
+    "type": "module",
+    "exports": {
+        ".": "./lib/index.mjs"
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "format": "prettier --write .",
+        "format:check": "prettier --check .",
+        "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
+        "test:watch": "npm run lint && npm run test -- --watch",
+        "ci": "npm run format:check && npm run lint && npm test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/coduori/dmvic.git"
+    },
+    "keywords": [
+        "dmvic",
+        "motor vehicle insurance certificates",
+        "kenya",
+        "aki"
+    ],
+    "author": "oduori oranga",
+    "license": "GNU",
+    "bugs": {
+        "url": "https://github.com/coduori/dmvic/issues"
+    },
+    "homepage": "https://github.com/coduori/dmvic#readme",
+    "dependencies": {
+        "undici": "^7.2.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.33.0",
+        "@jest/globals": "^30.0.5",
+        "cross-env": "^10.0.0",
+        "eslint": "^9.33.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-import": "^2.32.0",
+        "eslint-plugin-jest": "^29.0.1",
+        "eslint-plugin-n": "^17.21.3",
+        "eslint-plugin-promise": "^7.2.1",
+        "eslint-plugin-security": "^3.0.1",
+        "eslint-plugin-unicorn": "^60.0.0",
+        "globals": "^16.3.0",
+        "jest": "^30.0.5",
+        "prettier": "^3.6.2"
+    },
+    "engines": {
+        "node": ">=16"
+    }
 }
