--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,9 +16,8 @@ jobs:
         name: Snyk Security Scan
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@master
-            - uses: snyk/actions/node@master
-              continue-on-error: true
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
               with:
                   node-version: 20
                   cache: 'npm'
@@ -27,12 +26,8 @@ jobs:
               uses: snyk/actions/node@v4
               env:
                   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-              with:
-                  args: --all-projects
             - name: Upload Snyk scan results to GitHub Code Scanning
               uses: github/codeql-action/upload-sarif@v3
-              with:
-                  sarif_file: snyk.sarif
 
     test:
         name: Test, Lint, Format
