--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,7 +23,7 @@ jobs:
                   cache: 'npm'
             - run: npm ci
             - name: Snyk Scan
-              uses: snyk/actions/node@v4
+              uses: snyk/actions/node@master
               env:
                   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
             - name: Upload Snyk scan results to GitHub Code Scanning
