--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -28,6 +28,8 @@ jobs:
                   SNYK_TOKEN: ${{ secrets.GH_WORKFLOW_SNYK_TOKEN }}
             - name: Upload Snyk scan results to GitHub Code Scanning
               uses: github/codeql-action/upload-sarif@v3
+              with:
+                sarif_file: snyk.sarif
 
     test:
         name: Test, Lint, Format
