--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,6 +26,8 @@ jobs:
               uses: snyk/actions/node@master
               env:
                   SNYK_TOKEN: ${{ secrets.GH_WORKFLOW_SNYK_TOKEN }}
+              with:
+                  args: --sarif-file-output=snyk.sarif
             - name: Upload Snyk scan results to GitHub Code Scanning
               uses: github/codeql-action/upload-sarif@v3
               with:
