chore: shift left with snyk in the CI(#41)
* chore: beef up security with synk in the CI
* chore: update release script and add scan script for local dev

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,4 +1,4 @@
-name: Publish NPM Package
+name: CI/CD Pipeline
 
 on:
     pull_request:
@@ -12,6 +12,27 @@ permissions:
     pull-requests: write
 
 jobs:
+    security:
+        name: Snyk Security Scan
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 20
+                  cache: 'npm'
+            - run: npm ci
+            - name: Snyk Scan
+              uses: snyk/actions/node@master
+              env:
+                  SNYK_TOKEN: ${{ secrets.GH_WORKFLOW_SNYK_TOKEN }}
+              with:
+                  args: --sarif-file-output=snyk.sarif
+            - name: Upload Snyk scan results to GitHub Code Scanning
+              uses: github/codeql-action/upload-sarif@v3
+              with:
+                  sarif_file: snyk.sarif
+
     test:
         name: Test, Lint, Format
         runs-on: ubuntu-latest
@@ -20,7 +41,7 @@ jobs:
             - uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  cache: 'npm' # This caches node modules for faster runs
+                  cache: 'npm'
             - run: npm ci
 
             - name: Check formatting, Lint and Run tests
@@ -33,7 +54,7 @@ jobs:
         name: version bump
         needs: test
         runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Ensure this only runs on main branch pushes
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         steps:
             - name: Set up Release Please
               id: release
@@ -59,7 +80,7 @@ jobs:
         permissions:
             contents: read
             id-token: write
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push' # Ensure this only runs on main branch pushes
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
@@ -68,6 +89,6 @@ jobs:
                   registry-url: https://registry.npmjs.org/
                   cache: 'npm'
             - run: npm ci
-            - run: npm publish # --provenance --access public to be added when we make the package public
+            - run: npm publish  --provenance --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.GH_WORKFLOW_TOKEN_NPM}}
