fix: update version bump step to depend on security and test

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,6 +15,9 @@ jobs:
     security:
         name: Snyk Security Scan
         runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            security-events: write
         steps:
             - uses: actions/checkout@v4
             - uses: actions/setup-node@v4
@@ -52,7 +55,7 @@ jobs:
 
     release:
         name: version bump
-        needs: test
+        needs: [test, security]
         runs-on: ubuntu-latest
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         steps:
