--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     },
     "homepage": "https://github.com/coduori/dmvic#readme",
     "dependencies": {
-        "undici": "^7.13.0"
+        "undici": "^7.13.0",
+        "yup": "^1.7.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.34.0",
