--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "devDependencies": {
         "@eslint/js": "^9.34.0",
         "@jest/globals": "^30.1.2",
+        "chance": "^1.1.13",
         "cross-env": "^10.0.0",
         "dotenv-cli": "^10.0.0",
         "eslint": "^9.34.0",
