--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     },
     "homepage": "https://github.com/coduori/dmvic#readme",
     "dependencies": {
-        "undici": "^7.13.0"
+        "undici": "^7.13.0",
+        "yup": "^1.7.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.34.0",
         "@jest/globals": "^30.1.2",
+        "chance": "^1.1.13",
         "cross-env": "^10.0.0",
         "dotenv-cli": "^10.0.0",
         "eslint": "^9.34.0",
