feat: Add TypeScript definitions and configuration
- Created `index.d.ts` with interfaces and enums for API configuration, responses, and certificate management.
- Updated `jest.config.mjs` to support TypeScript and ESM modules.
- Added TypeScript dependencies in `package-lock.json` and `package.json`.
- Introduced `tsconfig.json` for TypeScript compiler options and strict type checking.
- Enhanced CI script in `package.json` to include type checking.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -47,11 +47,17 @@ jobs:
                   cache: 'npm'
             - run: npm ci
 
-            - name: Check formatting, Lint and Run tests
-              run: |
-                  npm run format:check
-                  npm run lint
-                  npm test
+            - name: Check code formatting
+              run: npm run format:check
+
+            - name: Lint code
+              run: npm run lint
+
+            - name: Type check
+              run: npm run type-check
+
+            - name: Run tests
+              run: npm test
 
     release:
         name: version bump
