--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
     "version": "1.7.2",
     "description": "A DMVIC NPM package to manage DMVIC certificate requests",
     "main": "lib/index.mjs",
+    "types": "index.d.ts",
     "type": "module",
     "exports": {
         ".": "./lib/index.mjs"
     },
     "scripts": {
+        "type-check": "tsc --noEmit",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
         "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
         "test:watch": "npm run lint && npm run test -- --watch",
-        "ci": "npm run format:check && npm run lint && npm test",
+        "ci": "npm run format:check && npm run lint && npm run type-check && npm test",
         "snyk-scan": "dotenv snyk test --all-projects",
         "security": "npm run snyk-scan"
     },
@@ -41,6 +43,10 @@
     "devDependencies": {
         "@eslint/js": "^9.34.0",
         "@jest/globals": "^30.1.2",
+        "@types/jest": "^30.0.0",
+        "@types/node": "^24.5.2",
+        "@typescript-eslint/eslint-plugin": "^8.44.1",
+        "@typescript-eslint/parser": "^8.44.1",
         "chance": "^1.1.13",
         "cross-env": "^10.0.0",
         "dotenv-cli": "^10.0.0",
@@ -55,7 +61,9 @@
         "globals": "^16.3.0",
         "jest": "^30.1.3",
         "prettier": "^3.6.2",
-        "snyk": "^1.1299.0"
+        "snyk": "^1.1299.0",
+        "ts-jest": "^29.4.4",
+        "typescript": "^5.9.2"
     },
     "engines": {
         "node": ">=20"
