--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
         "eslint-plugin-n": "^17.21.3",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-security": "^3.0.1",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-sonarjs": "^3.0.5",
+        "eslint-plugin-testing-library": "^7.9.2",
         "eslint-plugin-unicorn": "^60.0.0",
         "globals": "^16.3.0",
         "jest": "^30.1.3",
