--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -54,7 +54,7 @@ jobs:
               run: npm run lint
 
             - name: Type check
-              run: npm run type-check
+              run: npm run type:check
 
             - name: Run tests
               run: npm test
