--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         ".": "./lib/index.mjs"
     },
     "scripts": {
-        "type-check": "tsc --noEmit",
+        "type:check": "tsc --noEmit",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
@@ -17,8 +17,8 @@
         "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
         "test:watch": "npm run lint && npm run test -- --watch",
         "ci": "npm run format:check && npm run lint && npm run type-check && npm test",
-        "snyk-scan": "dotenv snyk test --all-projects",
-        "security": "npm run snyk-scan"
+        "snyk:scan": "dotenv snyk test --all-projects",
+        "security": "npm run snyk:scan"
     },
     "repository": {
         "type": "git",
@@ -57,6 +57,9 @@
         "eslint-plugin-n": "^17.21.3",
         "eslint-plugin-promise": "^7.2.1",
         "eslint-plugin-security": "^3.0.1",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-sonarjs": "^3.0.5",
+        "eslint-plugin-testing-library": "^7.9.2",
         "eslint-plugin-unicorn": "^60.0.0",
         "globals": "^16.3.0",
         "jest": "^30.1.3",
