refactor: add validation error handler

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "kenya",
         "aki"
     ],
-    "author": "oduori oranga",
+    "author": "oduori oranga <oduori.oranga@gmail.com>",
     "license": "GNU",
     "bugs": {
         "url": "https://github.com/coduori/dmvic/issues"
