chore: update publish step to use OIDC ID token

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -99,7 +99,8 @@ jobs:
                   node-version: 20
                   registry-url: https://registry.npmjs.org/
                   cache: 'npm'
+
+            - name: Update npm
+              run: npm install -g npm@latest
             - run: npm ci
             - run: npm publish  --provenance --access public
-              env:
-                  NODE_AUTH_TOKEN: ${{secrets.GH_WORKFLOW_TOKEN_NPM}}
