--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -103,4 +103,4 @@ jobs:
             - name: Update npm
               run: npm install -g npm@latest
             - run: npm ci
-            - run: npm publish  --provenance --access public
+            - run: npm publish
